k8s/disabled/be-npservice.yaml
apiVersion: v1
kind: Service
metadata:
  name: be-npservice
spec:
  type: NodePort
  selector:
    app: suggesty-be
  ports:
  - name: be-nps-port
    protocol: TCP
    port: 8000
    targetPort: 8000
