k8s/disabled/fe-npservice.yaml
apiVersion: v1
kind: Service
metadata:
  name: fe-npservice
spec:
  type: NodePort
  selector:
    app: suggesty-fe
  ports:
  - name: fe-nps-port
    protocol: TCP
    port: 80
    targetPort: 80
