k8s/disabled/ingress-service.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-service-web
  annotations:
    nginx.ingress.kubernetes.io/use-regex: 'true'
spec:
  ingressClassName: nginx
  rules:
    - host: suggesty.local.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: fe-cluster-srv
                port:
                  number: 80
          - path: /api/v1/
            pathType: Prefix
            backend:
              service:
                name: be-cluster-srv
                port:
                  number: 8000
